--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -90,13 +90,7 @@
               <!-- Loop through all vice president candidates -->
               <% candidates.filter(candidate => candidate.position === 'vice president').sort((a, b) => a.party.localeCompare(b.party)).forEach((vicePresident, index) => { %>
               <div class="label-container label-vice-president">
-                <input
-                  class="ballot-choice"
-                  id="vice-president-<%= index + 1 %>"
-                  type="radio"
-                  name="vicePresident"
-                  value="<%= JSON.stringify({ id: vicePresident._id, name: vicePresident.name, image: vicePresident.image, party: vicePresident.party, position: vicePresident.position, moreInfo: vicePresident.moreInfo }) %>"
-                />
+                <input class="ballot-choice" id="vice-president-<%= index + 1 %>" type="radio" name="vicePresident" value="<%= JSON.stringify({ id: vicePresident._id, name: vicePresident.name, image: vicePresident.image, party: vicePresident.party, position: vicePresident.position, moreInfo: vicePresident.moreInfo }) %>" />
 
                 <label class="ballot-tile" for="vice-president-<%= index + 1 %>">
                   <h4 class="party"><%= vicePresident.party %></h4>
@@ -247,9 +241,7 @@
                   <div class="folder">
                     <div class="top">
                       <svg viewBox="0 0 24 27">
-                        <path
-                          d="M1,0 L23,0 C23.5522847,-1.01453063e-16 24,0.44771525 24,1 L24,8.17157288 C24,8.70200585 23.7892863,9.21071368 23.4142136,9.58578644 L20.5857864,12.4142136 C20.2107137,12.7892863 20,13.2979941 20,13.8284271 L20,26 C20,26.5522847 19.5522847,27 19,27 L1,27 C0.44771525,27 6.76353751e-17,26.5522847 0,26 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z"
-                        ></path>
+                        <path d="M1,0 L23,0 C23.5522847,-1.01453063e-16 24,0.44771525 24,1 L24,8.17157288 C24,8.70200585 23.7892863,9.21071368 23.4142136,9.58578644 L20.5857864,12.4142136 C20.2107137,12.7892863 20,13.2979941 20,13.8284271 L20,26 C20,26.5522847 19.5522847,27 19,27 L1,27 C0.44771525,27 6.76353751e-17,26.5522847 0,26 L0,1 C-6.76353751e-17,0.44771525 0.44771525,1.01453063e-16 1,0 Z"></path>
                       </svg>
                     </div>
                     <div class="paper"></div>
